# xcloc-csv-converter

./: LICENSE  README.md  pyproject.toml  xcloc_converter.py
tests/: test_xliff_write.py
