[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "xcloc-csv-converter"
version = "0.1.0"
description = "Convert Xcode .xcloc localization bundles to CSV and back for translator workflows."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "zndo contributors" }]

[project.scripts]
xcloc-csv = "xcloc_converter:main"

[tool.setuptools]
py-modules = ["xcloc_converter"]
